main/default/objects/Filter_Default_Coverages_Query_Setting__mdt/Filter_Default_Coverages_Query_Setting__mdt.object-meta.xml
<CustomObject>
    <label>Filter Default Coverages Query Setting</label>
    <pluralLabel>Filter Default Coverages Query Settings</pluralLabel>
</CustomObject>