main/default/objects/Filter_Default_Coverages_Query_Setting__mdt/fields/Lookup_To_Parent_Field_API_Name__c.field-meta.xml
<CustomField>
    <fullName>Lookup_To_Parent_Field_API_Name__c</fullName>
    <label>Lookup To Parent Field API Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>